plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.smu.randsome'
version = '0.0.1-SNAPSHOT'
description = 'randsome-back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // DB
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.awaitility:awaitility:4.2.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'

    // Testcontainers
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers'

    // Jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // Querydsl
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

    // Retry
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework:spring-aspects'

    // Sentry
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.20.1'
    implementation 'io.sentry:sentry-logback:7.20.1'

    // FIREBASE
    implementation 'com.google.firebase:firebase-admin:9.7.0'

    // Monitoring: Actuator + Prometheus
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Redis (Lettuce 클라이언트 포함)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 분산 락 (Scheduled 중복 방지)
    implementation 'net.javacrumbs.shedlock:shedlock-spring:7.7.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-redis-spring:7.7.0'

    // QR 코드 생성
    implementation 'com.google.zxing:core:3.5.4'
    implementation 'com.google.zxing:javase:3.5.4'

    // Prometheus 메트릭 수집
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Loki 로그 수집
    implementation 'com.github.loki4j:loki-logback-appender:1.5.2'

}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar {
    archiveFileName = 'app.jar'
}

jar {
    enabled = false
}
